# arx5-sdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conda_environment.yaml  py310_environment.yaml  py39_environment.yaml
.devcontainer/: devcontainer.json
conda_environments/: py310_environment.yaml  py311_environment.yaml  py38_environment.yaml  py39_environment.yaml
docker/: Dockerfile  pull_docker.sh  run_docker.sh
examples/: calibrate_gripper.cpp  calibrate_joint.cpp  test_cartesian_controller.cpp  test_high_level.cpp  test_joint_controller.cpp  test_low_level.cpp
include/: utils.h
include/app/: cartesian_controller.h  cartesian_controller_new.h  cartesian_controller_old.h  common.h  config.h  controller_base.h  high_level.h  joint_controller.h  low_level.h  solver.h
include/hardware/: arx_can.h  can.h  math_ops.h  motor.h
include/libcan/: CANFrame.h  SocketCAN.h
models/: arx5.urdf  arx5_gopro.urdf  arx5_no_gripper.urdf  arx5_realsense.urdf  arx7_left.urdf  arx7_left_new.urdf  arx7_right.urdf  arx7_right_new.urdf
python/: CMakeLists.txt  arx5_interface.pyi  arx5_pybind.cpp
python/communication/: zmq_client.py  zmq_server.py
python/examples/: arm_test.py  arx5_zmq.py  bimanual_test.py  calibrate.py  cartesian_waypoint_scheduling.py  high_level.py  joint_control_test.py  joint_control_test_bimanual.py  joint_waypoint_scheduling.py  keyboard_teleop.py  low_level.py  low_level_test.py  spacemouse_teleop.py  teach_replay.py  test_bimanual.py  test_cartesian_control.py  test_joint_control.py  test_solver.py  test_upside_down.py  test_x7.py
python/peripherals/: spacemouse_shared_memory.py
python/shared_memory/: shared_memory_queue.py  shared_memory_ring_buffer.py
scripts/: install.sh
src/: utils.cpp
src/app/: cartesian_controller.cpp  cartesian_controller_old.cpp  controller_base.cpp  high_level.cpp  joint_controller.cpp  low_level.cpp
src/hardware/: math_ops.cpp  motor.cpp
